refactored integrations UI

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -37,13 +37,13 @@
     <div class="card-body">
         <h5 class="card-title">Simple, Fast, Free URL Shortener</h5>
         <p class="card-text d-flex flex-wrap gap-2">
-            <a href="https://t.me/UrlShortenerNinjaBot" target="_blank" class="badge rounded-pill bg-primary text-decoration-none">
+            <a href="https://t.me/UrlShortenerNinjaBot" target="_blank" class="badge rounded-pill bg-primary p-2">
                 Available as Telegram bot
             </a>
-            <a href="https://github.com/denysovkos/shorten-url-alfred-workflow/releases/tag/v1.0" target="_blank" class="badge rounded-pill bg-info text-decoration-none">
+            <a href="https://github.com/denysovkos/shorten-url-alfred-workflow/releases/tag/v1.0" target="_blank" class="badge rounded-pill bg-info p-2">
                 Alfred workflow
             </a>
-            <a href="https://www.twik.cc/swagger/index.html" target="_blank" class="badge rounded-pill bg-success text-decoration-none">
+            <a href="https://www.twik.cc/swagger/index.html" target="_blank" class="badge rounded-pill bg-success p-2">
                 Free API
             </a>
         </p>
