--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -61,7 +61,7 @@
         </p>
         <h6>FAQ</h6>
         <ul class="small">
-            <li><strong>Do you log or track anything?</strong> No. I don’t store user data or usage metrics.</li>
+            <li><strong>Do you log or track anything?</strong> No. I don’t store user data or usage metrics (except if you would like to register and use statistics as a feature).</li>
             <li><strong>Are links permanent?</strong> Currently, no - valid only for 180 days.</li>
             <li><strong>Can I report malicious content?</strong> Not yet, but you can contact me via the site footer if needed.</li>
             <li><strong>Is it open source?</strong> Not yet public, but will be in the future.</li>
