update: added database file to `.gitignore` and updated Home page content
Excluded `Data/app.db` from version control by updating `.gitignore`. Modified the Home page to reflect open-source project status with a link to the GitHub repository.

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -75,7 +75,7 @@
             <li><strong>Do you log or track anything?</strong> No. I don’t store user data or usage metrics (except if you would like to register and use statistics as a feature).</li>
             <li><strong>Are links permanent?</strong> Currently, no - valid only for 180 days.</li>
             <li><strong>Can I report malicious content?</strong> Not yet, but you can contact me via the site footer if needed.</li>
-            <li><strong>Is it open source?</strong> Not yet public, but will be in the future.</li>
+            <li><strong>Is it open source?</strong> Yes - <a target="_blank" href="https://github.com/denysovkos/url-samurai-v2">GitHub</a></li>
         </ul>
     </div>
 </div>
