--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -30,8 +30,8 @@
                                 <li><NavLink class="dropdown-item" href="urls">My Urls</NavLink></li>
                                 <li>
                                     <form action="Account/Logout" method="post" class="dropdown-item p-0">
-                                        <AntiforgeryToken />
-                                        <input type="hidden" name="ReturnUrl" value="@currentUrl" />
+                                        <AntiforgeryToken/>
+                                        <input type="hidden" name="ReturnUrl" value="@currentUrl"/>
                                         <button type="submit" class="btn btn-link dropdown-item">Logout</button>
                                     </form>
                                 </li>
@@ -47,6 +47,8 @@
                         </li>
                     </NotAuthorized>
                 </AuthorizeView>
+                &nbsp;
+                <NavLink class="btn btn-danger" href="https://forms.gle/RRUGj5Jkq8gAvZA79">Report URL</NavLink>
             </ul>
         </div>
     </div>
