--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -74,7 +74,7 @@
         <ul class="small">
             <li><strong>Do you log or track anything?</strong> No. I don’t store user data or usage metrics (except if you would like to register and use statistics as a feature).</li>
             <li><strong>Are links permanent?</strong> Currently, no - valid only for 180 days.</li>
-            <li><strong>Can I report malicious content?</strong> Not yet, but you can contact me via the site footer if needed.</li>
+            <li><strong>Can I report malicious content?</strong> Yes, fill the <a href="https://forms.gle/RRUGj5Jkq8gAvZA79" target="_blank">form</a></li>
             <li><strong>Is it open source?</strong> Yes - <a target="_blank" href="https://github.com/denysovkos/url-samurai-v2">GitHub</a></li>
         </ul>
     </div>
